[package]
name = "uint256-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
num = { version = "0.4.3", default-features = false, features = ["alloc"] }
sp1-zkvm = "6.2.4"
sp1-derive = "6.2.4"
bytemuck = "1.15.0"
